add_subdirectory( fc )
add_subdirectory( schema )
add_subdirectory( db2 )
#add_subdirectory( chain2 )
add_subdirectory( chain )
add_subdirectory( protocol )
add_subdirectory( net )
add_subdirectory( time )
add_subdirectory( utilities )
add_subdirectory( app )
add_subdirectory( plugins )
add_subdirectory( wallet )
add_subdirectory( manifest )
