add_subdirectory( fc )
add_subdirectory( vendor )
add_subdirectory( schema )
add_subdirectory( jsonball )
add_subdirectory( appbase )
add_subdirectory( chainbase )
add_subdirectory( mira )
add_subdirectory( chain )
add_subdirectory( protocol )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( plugins )
add_subdirectory( manifest )
add_subdirectory( wallet )
